48강 부터 듣기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=springmvc
+spring.output.ansi.enabled=always
 
-#?? ?? ?? ??(?? info)
+#\uC804\uC5ED\uC73C\uB85C \uB85C\uADF8\uB808\uBCA8\uC9C0\uC815
 logging.level.root=info
 
-#hello.springmvc ???? ? ?? ?? ?? ??
+#hello.springmvc \uB85C\uADF8\uB808\uBCA8\uC9C0\uC815
 logging.level.hello.springmvc=debug
